# recogna-ioa

./: README.md  pyproject.toml
apps/: demo_wot_client.py  demo_wot_dummy_client.py  demo_wot_llm_client.py  demo_wot_server.py
src/recogna_ioa/: __init__.py  agents.py  web_thing_client.py
