[project]
name = "recogna-ioa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carlos André Braile", email = "andre.prze.filho@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "websockets>=16.0",
    "webthing>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
